@@ -1,6 +1,7 @@
 general
 
-! document CID/ACID format
+! check whether mr xheight is in THANKS
+! include 0.3.1 in NEWS
 
 * xmalloc.h
 * handle encodings MacRoman and FontSpecific
